# razmer2m

./: .actrc  CMakeLists.txt  CMakePresets.json  Dockerfile.test  README  README.md
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml  emulator-ci.yaml
cmake/: FindAVRDUDE.cmake  avr-gcc-toolchain.cmake
docs/: Размер 2М_1104_схема.djvu
firmware/: CMakeLists.txt  main.cpp
firmware/analizer/: analizer.ino  config.h  emulator  upload_mega.sh
firmware/analizer/modules/LLBuffer/: interface.h
firmware/analizer/modules/LLBuffer/test/: main.c  test
firmware/analizer/modules/LLBufferItem/: implementation.c
firmware/analizer/modules/VDBuffer/: implementation.c
firmware/analizer/modules/VDBufferItem/: implementation.c  interface.h
firmware/analizer/modules/app/: implementation.c
firmware/analizer/modules/gpio/: implementation.c
firmware/analizer/modules/gpio/options/: arduino_mega_pro_avr.c
firmware/analizer/modules/rsc/: implementation.c
firmware/display/: modules.h
firmware/display/modules/: connection.h
firmware/display/modules/Buffer/test/modules/Timer/: interface.h
firmware/display/modules/BufferBlock/: implementation.c
firmware/display/modules/DBuffer/: interface.h
firmware/display/modules/app/: implementation.c
firmware/display/modules/bufferBlockMode_t/: interface.h
firmware/display/modules/debug/: interface.h
firmware/display/modules/display/: implementation.c
firmware/display/modules/gpio/options/: dummy.c
firmware/display/modules/segIndicator/: implementation.c
firmware/display/modules/server/: implementation.c  interface.h
firmware/emulator/: .gitignore  platformio.ini
firmware/emulator/include/: config.h  tbuffer.h  tcode.h  timer.h
firmware/emulator/src/: main.cpp  tbuffer.cpp  tcode.cpp  timer.cpp
firmware/emulator/test/test_native/: Arduino.h  README.md  test_timer.cpp
firmware/reader/: README  main_linux.c  modules.h  platformio.ini
firmware/reader/include/: ascii2bcd.h  config.h  data.h  gpio.h  reader.h  writer.h
firmware/reader/modules/ArduinoLinux/: interface.h
firmware/reader/modules/Buffer/: implementation.c
firmware/reader/modules/Buffer/test/modules/stime_t/: implementation.c
firmware/reader/modules/BufferBlock/: implementation.c  interface.h
firmware/reader/modules/TBuffer/: implementation.c  interface.h
firmware/reader/modules/app/: implementation.c
firmware/reader/modules/asciiBcd/: implementation.c
firmware/reader/modules/debug/: implementation.c
firmware/reader/modules/gpio/: interface.h
firmware/reader/modules/gpio/options/: arduino_mega_pro_avr_b_inverted.c
firmware/reader/modules/reader/options/: imitation.c  real.c
firmware/reader/modules/writer/: implementation.c
firmware/reader/src/: ascii2bcd.cpp  data.cpp  gpio.cpp  gpio_mega2560.cpp  gpio_mega328.cpp  main.cpp  reader.cpp  timer.cpp  writer.cpp
firmware/reader/test/test_native/: test_data.cpp
include/: config.h  display.h  emulator.h  format.h  gpio.h  receiver.h  spi.h  timer.h  transmitter.h  uart.h
schematic/: hardware.dia
schematic/kicad/: f.kicad_prl  f.kicad_pro  f.kicad_sch  fp-info-cache
schematic/kicad/Arduino.pretty/: Arduino Nano.kicad_mod  Display_MAX7219.kicad_mod
software/: README
software/display/: README  build.sh  config.h  display
software/display/modules/: Arduino.h  razmer2m1104.h
software/display/modules/Buffer/: implementation.c  interface.h
software/display/modules/BufferBlock/: interface.h
software/display/modules/DBuffer/: implementation.c
software/display/modules/avr/: interface.h
software/display/modules/display/: interface.h
software/display/modules/displayError_t/: implementation.c  interface.h
software/display/modules/gpio/: implementation.c  interface.h
software/display/modules/segIndicator/: interface.h
software/display/modules/stopwatch/: interface.h
software/display/modules/viv_t/: interface.h
software/display/modules/yn_t/: implementation.c
software/reader/: build.sh  config.h  reader  reader.ino
software/reader/modules/ArduinoLinux/: implementation.c
software/reader/modules/Buffer/: interface.h
software/reader/modules/Ton/: implementation.c  interface.h
software/reader/modules/asciiBcd/: interface.h
software/reader/modules/avr/: interface.h
software/reader/modules/debug/: interface.h
software/reader/modules/gpio/: implementation.c
software/reader/modules/reader/: implementation.c  interface.h
software/reader/modules/result_t/: interface.h
software/reader/modules/serial/: implementation.c  interface.h
software/reader/modules/stopwatch/: implementation.c
software/reader/modules/writer/: interface.h
software/tools/analizer/: README  analizer  build.sh  modules.h
software/tools/emulator/: README  README.md  build.sh  config.h  emulator  modules.h  platformio.ini
software/tools/emulator/include/: biState_t.h  config.h  constexpr_test.h  esbuffer.h  modules.h  mr1.h  razmer2m1104.h  signals.h  stime_t.h  tbuffer.h  tcode.h  timer.h  viv_t.h  writer.h  yn_t.h
software/tools/emulator/src/: ascii2bcd.cpp  constexpr_test.cpp  debug.cpp  esbuffer.cpp  main.cpp  mr1.cpp  signals.cpp  stime_t.cpp  tbuffer.cpp  tcode.cpp  timer.cpp  writer.cpp  yn_t.cpp
software/tools/treader/: build.sh
software/tools/tsender/: README  build.sh  tsender
software/tools/tsender/modules/: connection.h
software/treader/: README  main.c  treader
software/treader/modules/app/: implementation.c
software/treader/modules/appSerial/: implementation.c
software/treader/modules/appSerialError_t/: interface.h
software/treader/modules/debug/: interface.h
software/treader/modules/reader/: interface.h
software/treader/modules/serial/: implementation.c
software/treader/modules/signals/: interface.h
software/treader/modules/viv_t/: implementation.c
software/tsender/modules/app/: implementation.c
software/tsender/modules/appSerial/: interface.h
tests/: CMakeLists.txt  qemu_test_runner.h  qemu_test_runner_linux.cpp  qemu_test_runner_windows.cpp  test_format_avr.cpp  test_format_native.cpp  test_format_runner.cpp
(+81 files in other folders)
